test/fail/vardeclinit-inferred-type-global.app
//Global variable a has illegal type.
application test

  var a := Entity{}; //shouldn't break rename phase

  function do() {
    
  }
